Error in cell #2
This code:
scatt = fig.data[0]fig.add_scatter()

caused an error later at:
scatt.x=xs

This worked:
fig.add_scatter()
scatt = fig.data[0]

--- a/notebooks/Interact.ipynb
+++ b/notebooks/Interact.ipynb
@@ -50,7 +50,8 @@
    ],
    "source": [
     "fig = go.FigureWidget()\n",
-    "scatt = fig.add_scatter()\n",
+    "fig.add_scatter()\n",
+    "scatt = fig.data[0]\n",
     "fig"
    ]
   },
