Problem in cell 7
scatt1 = f1.add_scatter(x=iris_df.sepal_length, y=iris_df.petal_width)

doesn't appear to work. I changed it to:

f1.add_scatter(x=iris_df.sepal_length, y=iris_df.petal_width)
scatt1 = f1.data[0]

--- a/notebooks/Overview.ipynb
+++ b/notebooks/Overview.ipynb
@@ -234,7 +234,8 @@
    },
    "outputs": [],
    "source": [
-    "scatt1 = f1.add_scatter(x=iris_df.sepal_length, y=iris_df.petal_width)"
+    "f1.add_scatter(x=iris_df.sepal_length, y=iris_df.petal_width)\n",
+    "scatt1 = f1.data[0]"
    ]
   },
   {
